welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:23: error: not found: value Pos
    Pos(1,getMondeHauteur-1)
    ^